[metadata]
name = NXrefine
description = Data reduction for single crystal x-ray scattering
long_description = file: README.md   
long_description_content_type = text/markdown
url = https://cels.anl.gov/axmas
download_url = https://github.com/axmas/nxrefine
author = Raymond Osborn
author_email = rayosborn@mac.com
license = Modified BSD License
license_file = COPYING
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    nexpy
    cctbx-base
    pyfai
    persist-queue
    sqlalchemy
    psutil
    scikit-image
    xtec
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
nxrefine = julia/*.jl

[options.entry_points]
console_scripts =
    nxchoose = nxrefine.scripts.nxchoose:main
    nxcombine = nxrefine.scripts.nxcombine:main
    nxcopy = nxrefine.scripts.nxcopy:main
    nxdatabase = nxrefine.scripts.nxdatabase:main
    nxfind = nxrefine.scripts.nxfind:main
    nxlink = nxrefine.scripts.nxlink:main
    nxmax = nxrefine.scripts.nxmax:main
    nxparent=nxrefine.scripts.nxparent:main
    nxpdf = nxrefine.scripts.nxpdf:main
    nxprepare = nxrefine.scripts.nxprepare:main
    nxreduce = nxrefine.scripts.nxreduce:main
    nxrefine = nxrefine.scripts.nxrefine:main
    nxserver = nxrefine.scripts.nxserver:main
    nxsettings = nxrefine.scripts.nxsettings:main
    nxsum = nxrefine.scripts.nxsum:main
    nxtransform = nxrefine.scripts.nxtransform:main
